# dotfiles

./: .Xresources  .gitignore  .gitmodules  .gtkrc-2.0  .tags  README.md  TODO.md  setup.sh  zshrc
.claude/: settings.local.json
.config/: compton.conf
.scripts/: backupPhone  brightnessDown.sh  brightnessUp.sh  cal.sh  colors.sh  copydot.sh  launcher  phone  phonePluggedin.sh
anyrun/: colors.css  config.ron  style.css
bar/: config.toml  shell-integration.zsh  style.css
bspwm/: bspwmrc  external_rules  focus_watcher
cairo-dock/: .cairo-dock
dunst/: dunstrc
eww/: ;  colors.scss  eww.scss  eww.xml  eww.yuck
greetd/: config.toml
hypr/: colors.conf  hypridle.conf  hyprland.conf  (+4 more)
tools/bar/: Cargo.toml  README.md
tools/bar/src/: actions.rs  activity.rs  config.rs  context.rs  integration.rs  ipc.rs  lib.rs  main.rs  model.rs  state.rs  timers.rs
tools/bar/src/compositor/: hyprland.rs  mod.rs  niri.rs
tools/bar/src/sources/: audio.rs  bluetooth.rs  brightness.rs  calendar.rs  media.rs  mod.rs  network.rs  power.rs  resources.rs
tools/bar/src/ui/: artwork.rs  context_card.rs  control_center.rs  mod.rs  popovers.rs  surface.rs  system.rs  theme.rs  wm.rs
tools/bar/tests/: calendar.rs  compositor.rs  desktop_contract.sh
tools/bar/tests/fixtures/: hyprland-events.txt  hyprland-snapshot.json  niri-events.jsonl  niri-snapshot-keyboard-layouts.json  niri-snapshot-outputs.json  niri-snapshot-windows.json  niri-snapshot-workspaces.json
tools/launcher/: Cargo.toml  README.md
tools/launcher/src/: main.rs  model.rs  password.rs  prediction.rs  sources.rs
(+228 files in other folders)
