[package]
name = "cockpit-bar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
dirs = "6.0.0"
gtk4 = { version = "0.10.1", features = ["v4_20"] }
gtk4-layer-shell = "0.7.1"
libc = "0.2.177"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
zbus = { version = "5.17.0", features = ["blocking"] }
