[package]
name = "dot-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
dirs = "6.0.0"
gtk4 = { version = "0.10.1", features = ["v4_20"] }
gtk4-layer-shell = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
urlencoding = "2.1.3"
